FM: fix transactions and result set closing ()
For more details, see these issues:
* fixes NOM-502
* fixes NOM-504

After this change, we don't need this line in ITs anymore:
```
        builder.setConfig(GraphDatabaseInternalSettings.track_tx_statement_close, false);
```

Also, the `FleetManagementCommunityIT.java` and
`FleetManagementEnterpriseReportingIT.java` are made compatible with
SPEEDY. The incompatibility of the latter was not visible because of a
FM status bug where the whole API communication was skipped.